<resources>
    <string name="app_name">Mobile_Project2</string>
    <string name="go_to_map">GO TO MAP</string>
    <string name="title_activity_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lattitude">lattitude</string>
    <string name="longitutde">longitutde</string>
    <string name="latitude_2">latitude 2</string>
    <string name="longitude_2">longitude 2</string>
    <string name="change_marker_1">Change 1</string>
    <string name="change_marker_2">Change 2</string>
    <string name="draw_path">Draw Path</string>
</resources>
