<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"

    tools:context="com.example.jakevitale.mobile_project2.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_map"
        android:id="@+id/map_button"
        android:onClick="moveToMap"/>

    <EditText
        android:id="@+id/lat_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lattitude"
        android:inputType="numberDecimal|numberSigned"/>

    <EditText
        android:id="@+id/lon_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/longitutde"
        android:inputType="numberDecimal|numberSigned"/>

    <EditText
        android:id="@+id/lat_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/latitude_2"
        android:inputType="numberDecimal|numberSigned"/>

    <EditText
        android:id="@+id/lon_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/longitude_2"
        android:inputType="numberDecimal|numberSigned"/>
</LinearLayout>
